corregí la social media de index

--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
                 <section class="social-media  d-none d-md-block">
                     <ul class="list-unstyled d-flex">
                         <li class="mx-2">
-                            <img src="../media/instagram-white-icon.png" alt="instagra logo"
+                            <img src="./media/instagram.png" alt="instagram logo"
                                 style="width: 28px; height: 28px;">
                         </li>
                         <li class="mx-2">
-                            <img src="../media/discord.png" alt="discord logo" style="width: 28px; height: 28px;">
+                            <img src="./media/discord.png" alt="discord logo" style="width: 28px; height: 28px;">
                         </li>
                         <li class="mx-2">
-                            <img src="../media/youtube.png" alt="youtube logo" style="width: 28px; height: 28px;">
+                            <img src="./media/youtube.png" alt="youtube logo" style="width: 28px; height: 28px;">
                         </li>
                         <li class="mx-2">
-                            <img src="../media/threads.png" alt="threads logo" style="width: 28px; height: 28px;">
+                            <img src="./media/threads.png" alt="threads logo" style="width: 28px; height: 28px;">
                         </li>
 
                     </ul>
