--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 
                 <a href="../index.html">
-                  </a><img src="../media/Logotipo Apamate Studio.png" alt=""
+                  </a><img src="./media/Logotipo Apamate Studio.png" alt=""
                     class="logo img-fluid"></a>
 
                 <section class="social-media  d-none d-md-block">
