--- a/pages/about us.html
+++ b/pages/about us.html
@@ -21,9 +21,9 @@
 
                 <a href="../index.html">
                   </a><img src="../media/Logotipo Apamate Studio.png" alt=""
-                    class="logo img-fluid"></a>
+                    class="logo img-fluid mt-4"></a>
 
-                <section class="social-media  d-none d-md-block">
+                <section class="social-media  d-none d-md-block mt-4">
                     <ul class="list-unstyled d-flex">
                         <li class="mx-2">
                             <img src="../media/instagram-white-icon.png" alt="instagra logo"
@@ -56,7 +56,7 @@
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <ul class="navbar-nav ms-3">
                             <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="./pages/games.html">Games</a>
+                            <li class="nav-item"><a class="nav-link" href="../pages/games.html">Games</a>
                             <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">About us</a></li>
                             <li class="nav-item"><a class="nav-link" href="./contact.html">Contact</a></li>
                             <li class="nav-item"><a class="nav-link" href="./pitchus.html">Pitch us</a></li>
