--- a/pages/pitchus.html
+++ b/pages/pitchus.html
@@ -21,9 +21,9 @@
 
                 <a href="../index.html">
                   </a><img src="../media/Logotipo Apamate Studio.png" alt=""
-                    class="logo img-fluid"></a>
+                    class="logo img-fluid mt-4"></a>
 
-                <section class="social-media  d-none d-md-block">
+                <section class="social-media  d-none d-md-block mt-4">
                     <ul class="list-unstyled d-flex">
                         <li class="mx-2">
                             <img src="../media/instagram-white-icon.png" alt="instagra logo"
