--- a/pages/contact.html
+++ b/pages/contact.html
@@ -102,21 +102,24 @@
 
         </head>
 
-        <footer>
-            <p>© 2025 Apamate Studio. All rights reserved.</p>
+        <footer class="py-3 mt-5"> <div class="container d-flex flex-column flex-md-row justify-content-md-between align-items-center">
+            <div class="mb-2 mb-md-0 text-center text-md-start">
+                <p class="m-0 text-white">© 2025 Apamate Studio. All rights reserved.</p>
+            </div>
 
-
-            <ul>
-                <li>Press request</li>
-                <li>Privacy</li>
-                <li>Video policy</li>
-                <li>Technical support</li>
-            </ul>
-
-
-
-
-        </footer>
+            <div>
+                <ul class="list-unstyled d-flex flex-column flex-sm-row justify-content-center justify-content-md-end m-0">
+                    <li class="px-2 py-1"><a href="#" class="text-white text-decoration-none">Press request</a></li>
+                    <li class="px-2 py-1"><a href="#" class="text-white text-decoration-none">Privacy</a></li>
+                    <li class="mpx-2 py-1"><a href="#" class="text-white text-decoration-none">Video policy</a></li>
+                    <li class="px-2 py-1"><a href="#" class="text-white text-decoration-none">Technical support</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+        crossorigin="anonymous"></script>
 
         <body>
 
