--- a/pages/games.html
+++ b/pages/games.html
@@ -8,52 +8,34 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/estilos.css">
 </head>
 
 <body>
-
-
-    <header class="justify-content-between ms-auto">
-
-        <div class="container d-flex justify-content-between align-items-center">
-            <div class="d-flex justify-content-between align-items-center mb-3">
-
-
-                <a href="../index.html">
-                  </a><img src="../media/Logotipo Apamate Studio.png" alt=""
-                    class="logo img-fluid mt-4"></a>
-
-                <section class="social-media  d-none d-md-block mt-4">
-                    <ul class="list-unstyled d-flex">
-                        <li class="mx-2">
-                            <img src="../media/instagram-white-icon.png" alt="instagra logo"
-                                style="width: 28px; height: 28px;">
-                        </li>
-                        <li class="mx-2">
-                            <img src="../media/discord.png" alt="discord logo" style="width: 28px; height: 28px;">
-                        </li>
-                        <li class="mx-2">
-                            <img src="../media/youtube.png" alt="youtube logo" style="width: 28px; height: 28px;">
-                        </li>
-                        <li class="mx-2">
-                            <img src="../media/threads.png" alt="threads logo" style="width: 28px; height: 28px;">
-                        </li>
-
-                    </ul>
-
-                </section>
-
-            </div>
-
-            <nav class="navbar navbar-expand-lg navbar-dark">
+    <header> <div class="container d-flex justify-content-between align-items-center"> <div class="d-flex align-items-center mb-3"> 
+            <a href="../index.html" class="logo-link img-fluid mt-4">
+                <img src="../media/Logotipo Apamate Studio.png" alt="Logo de Apamate Studio" class="logo">
+            </a> <section class="social-media d-none d-md-block mt-4 ms-auto"> <ul class="list-unstyled d-flex">
+                    <li class="mx-2">
+                        <img src="../media/instagram.png" alt="instagram logo" style="width: 28px; height: 28px;">
+                    </li>
+                    <li class="mx-2">
+                        <img src="../media/discord.png" alt="discord logo" style="width: 28px; height: 28px;">
+                    </li>
+                    <li class="mx-2">
+                        <img src="../media/youtube.png" alt="youtube logo" style="width: 28px; height: 28px;">
+                    </li>
+                    <li class="mx-2">
+                        <img src="../media/threads.png" alt="threads logo" style="width: 28px; height: 28px;">
+                    </li>
+                </ul>
+            </section> </div> <nav class="navbar navbar-expand-lg navbar-dark p-0">
                 <div class="container-fluid">
                     <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                         aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <ul class="navbar-nav ms-3">
                             <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
@@ -66,10 +48,8 @@
                 </div>
             </nav>
         </div>
-
-
     </header>
-
+           
 
 
     <div class="gamesCards container">
