--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@
     <header> 
         <div class="container d-flex "> 
             <a href="../index.html" class="logo-link img-fluid mt-4">
-                <img src="../media/Logotipo Apamate Studio.png" alt="Logo de Apamate Studio" class="logo">
+                <img src="./media/Logotipo Apamate Studio.png" alt="Logo de Apamate Studio" class="logo">
             </a> 
             <section class="social-media d-none d-md-block mt-4"> 
                 <ul class="list-unstyled d-flex">
                     <li class="mx-2">
-                        <img src="../media/instagram.png" alt="instagram logo" style="width: 28px; height: 28px;">
+                        <img src="./media/instagram.png" alt="instagram logo" style="width: 28px; height: 28px;">
                     </li>
                     <li class="mx-2">
-                        <img src="../media/discord.png" alt="discord logo" style="width: 28px; height: 28px;">
+                        <img src="./media/discord.png" alt="discord logo" style="width: 28px; height: 28px;">
                     </li>
                     <li class="mx-2">
-                        <img src="../media/youtube.png" alt="youtube logo" style="width: 28px; height: 28px;">
+                        <img src="./media/youtube.png" alt="youtube logo" style="width: 28px; height: 28px;">
                     </li>
                     <li class="mx-2">
-                        <img src="../media/threads.png" alt="threads logo" style="width: 28px; height: 28px;">
+                        <img src="./media/threads.png" alt="threads logo" style="width: 28px; height: 28px;">
                     </li>
                 </ul>
             </section> 
@@ -139,7 +139,7 @@
     <footer class="py-3"> <div class="container d-flex flex-column flex-md-row justify-content-md-between align-items-center">
         
         <img class="logo-footer d-lg-none" src="../media/Logo Apamate c borde blanco.png" alt="">
-        
+
         <section class="social-media-footer  mt-4"> 
                 <ul class="list-unstyled d-flex">
                     <li class="mx-2">
