--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Apamate Studio</title>
+    <meta name="description" content="Apamate Studio: A Venezuelan independent game development studio founded by brothers Wilmar and Wilderman Niño. Explore our work, from the action roguelike Mechanophagia to our upcoming psychological horror title, Animas. Discover unique, narrative-driven game experiences rooted in strong artistic direction and Venezuelan culture. Come and discover our games!">
+    <title>Home-Apamate Studio</title>
 
 
 
@@ -73,7 +73,7 @@
         <div class="contentIndex">
 
             <section class="banner container-fluid">
-                <img src="media/headerAnimas 2.png" class="img-fluid mb-5 mt-2" alt="">
+                <img src="media/headerAnimas 2.png" class="img-fluid mb-5 mt-2" alt="banner de videojuego Ánimas">
 
             </section>
             
@@ -81,7 +81,7 @@
             <section class="welcome container">
                 <div class="row justify-content-start">
                     <div class="col-12 col-md-10 col-lg-9 offset-md-1"> 
-                        <h1 class= "welcome1 mt-5 mb-5">WELCOME TO APAMATE</h1>
+                        <h1 class= "welcome1 mt-5 mb-5">Welcome to Apamate</h1>
 
                          <p class="display-3">Crafted by passion, built to immerse. We develop compelling narratives, evocative art, and unforgettable gameplay.</p>
                     <div>
@@ -94,16 +94,16 @@
                 <div id="carouselExample" class="carousel slide">
                     <div class="carousel-inner">
                      <div class="carousel-item active">
-                        <img src="./media/Puerta para carrusel.png" class="d-block w-100" alt="...">
+                        <img src="./media/Puerta para carrusel.png" class="d-block w-100" alt="imagen de videojuego Ánimas">
                 </div>
 
                 <div>
                     <div class="carousel-item">
-                    <img src="./media/Ritual para carrusel.png" class="d-block w-100" alt="...">
+                    <img src="./media/Ritual para carrusel.png" class="d-block w-100" alt="imagen de videojuego Ánimas">
                 </div>
 
                 <div class="carousel-item">
-                    <img src="./media/ritual2 para carrusel.png" class="d-block w-100" alt="...">
+                    <img src="./media/ritual2 para carrusel.png" class="d-block w-100" alt="imagen de videojuego Ánimas">
                 </div>
 
                 </div>
@@ -138,7 +138,7 @@
 
     <footer class="py-3"> <div class="container d-flex flex-column flex-md-row justify-content-md-between align-items-center">
         
-        <img class="logo-footer d-lg-none" src="../media/Logo Apamate c borde blanco.png" alt="">
+        <img class="logo-footer d-lg-none" src="../media/Logo Apamate c borde blanco.png" alt="Logo de Apamate Studio">
 
         <section class="social-media-footer  mt-4"> 
                 <ul class="list-unstyled d-flex">
