--- a/pages/about us.html
+++ b/pages/about us.html
@@ -3,8 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About us</title>
+    <meta name="description" content="Learn about Apamate Studio, an independent Venezuelan game development studio founded by brothers Wilmar and Wilderman Niño in Caracas. Discover our journey from audiovisual production to creating unique, narrative-driven game experiences like Mechanophagia and Animas, driven by strong artistic direction and audio expertise.">
+    <meta name="keywords" content="Apamate Studio, about us, game development studio, independent game developers, Venezuelan studio, Wilmar Niño, Wilderman Niño, studio history, game development, audiovisual production, Mechanophagia, Animas">
+    <title>About us-Apamate Studio</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
@@ -85,7 +86,7 @@
     <footer class="py-3">
         <div class="container d-flex flex-column flex-md-row justify-content-md-between align-items-center">
 
-            <img class="logo-footer d-lg-none" src="../media/Logo Apamate c borde blanco.png" alt="">
+            <img class="logo-footer d-lg-none" src="../media/Logo Apamate c borde blanco.png" alt="Logo de Apamate Studio">
 
             <section class="social-media-footer  mt-4">
                 <ul class="list-unstyled d-flex">
