--- a/pages/pitchus.html
+++ b/pages/pitchus.html
@@ -3,8 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pitch us</title>
+    <meta name="description" content="Collaborate with Apamate Studio! We invite talented individuals and teams to pitch their game ideas for potential partnerships. As a Venezuelan independent game development studio, we're always looking for innovative concepts that align with our passion for unique, narrative-driven experiences. Share your vision with us.">
+    <meta name="keywords" content="Apamate Studio collaborations, game development pitch, submit game idea, game partnerships, indie game collaboration, Venezuelan game developers, game project proposals, pitch deck, game ideas, independent studio collaboration">
+    <title>Pitch us-Apamate Studio</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
@@ -119,8 +120,8 @@
    
     <footer class="py-3"> <div class="container d-flex flex-column flex-md-row justify-content-md-between align-items-center">
         
-        <img class="logo-footer d-lg-none" src="../media/Logo Apamate c borde blanco.png" alt="">
-        
+        <img class="logo-footer d-lg-none" src="../media/Logo Apamate c borde blanco.png" alt="Logo de Apamate Studio">
+
         <section class="social-media-footer  mt-4"> 
                 <ul class="list-unstyled d-flex">
                     <li class="mx-2">
